--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "author": {
     "name": "Emanuele Tido",
-    "email": "tidoemanuelezon@gmail.com",
+    "email": "tidoemanuele@gmail.com",
     "url": "http://localhost/telnet"
   },
   "homepage": "http://localhost/telnet",
