--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "node-telnet-client",
-  "version": "1.0.0-7",
+  "version": "1.0.0-8",
   "description": "nodejs http server running simple telnet client",
+  "tags" : ["telnet","client","node"],
   "keywords": [
     "node telnet client",
     "Node.js",
